fix dups